- Change the design of native ads in MainFragment and DisplayRoomFragment - Set the native ad option for request the ads

--- a/app/src/main/res/layout/ad_post_fragment.xml
+++ b/app/src/main/res/layout/ad_post_fragment.xml
@@ -63,7 +63,6 @@
                             android:id="@+id/ad_headline"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="#0000FF"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -103,49 +102,31 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="20dp"
                         android:layout_marginEnd="20dp"
-                        android:textSize="12sp" />
+                        android:textSize="18sp" />
 
                     <com.google.android.gms.ads.formats.MediaView
                         android:id="@+id/ad_media"
                         android:layout_gravity="center_horizontal"
-                        android:layout_width="250dp"
-                        android:layout_height="175dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
                         android:layout_marginTop="5dp" />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end"
                         android:orientation="horizontal"
                         android:paddingBottom="10dp"
                         android:paddingTop="10dp">
 
-                        <TextView
-                            android:id="@+id/ad_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="5dp"
-                            android:paddingStart="5dp"
-                            android:paddingRight="5dp"
-                            android:paddingEnd="5dp"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/ad_store"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="5dp"
-                            android:paddingStart="5dp"
-                            android:paddingRight="5dp"
-                            android:paddingEnd="5dp"
-                            android:textSize="12sp" />
-
                         <Button
                             android:id="@+id/ad_call_to_action"
-                            android:layout_width="wrap_content"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                            style="@style/Widget.AppCompat.ButtonBar"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:textSize="12sp" />
+                            android:background="@null"
+                            android:gravity="center" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
