--- a/app/src/main/res/layout/ad_room_fragment.xml
+++ b/app/src/main/res/layout/ad_room_fragment.xml
@@ -47,8 +47,8 @@
 
                     <ImageView
                         android:id="@+id/ad_icon"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:adjustViewBounds="true"
                         android:paddingBottom="5dp"
                         android:paddingRight="5dp"
@@ -63,7 +63,7 @@
                             android:id="@+id/ad_headline"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="#0000FF"
+                            android:textColor="@color/colorPrimary"
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
@@ -75,6 +75,7 @@
                                 android:id="@+id/ad_advertiser"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
+                                android:textColor="@color/secondaryTextColor"
                                 android:gravity="bottom"
                                 android:textSize="14sp"
                                 android:textStyle="bold"/>
@@ -103,13 +104,14 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="20dp"
                         android:layout_marginEnd="20dp"
-                        android:textSize="12sp" />
+                        android:textColor="@color/secondaryTextColor"
+                        android:textSize="14sp" />
 
                     <com.google.android.gms.ads.formats.MediaView
                         android:id="@+id/ad_media"
                         android:layout_gravity="center_horizontal"
-                        android:layout_width="250dp"
-                        android:layout_height="175dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
                         android:layout_marginTop="5dp" />
 
                     <LinearLayout
@@ -145,7 +147,9 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="12sp" />
+                            android:textColor="@color/background_color"
+                            android:background="@color/colorPrimary"
+                            android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
