- Fix the problem of RecyclerView keep loading if Google admob failed to load ads - Double confirm Create post and create room is ok

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -66,7 +66,7 @@
     <fragment
         android:id="@+id/commentFragment"
         android:name="upuphere.com.upuphere.ui.CommentFragment"
-        android:label="fragment_comment"
+        android:label="@string/comment"
         tools:layout="@layout/fragment_comment" />
     <fragment
         android:id="@+id/loginFragment"
