- Redesign of Login and SignUpFragment - Make Sign Up optional on start of the app - Make Term and Policy inside Sign Up Fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
 
     <color name="grey">#FFF7F6</color>
     <color name="grey_color">#EDE4E3</color>
+    <color name="dark_grey">#cccccc</color>
 </resources>
