--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,31 +17,49 @@
         android:layout_height="match_parent"
         tools:context=".ui.user.LoginFragment">
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="25dp"
-            android:contentDescription="@string/logo"
-            app:srcCompat="@drawable/upupherelogo" />
-
         <LinearLayout
             android:id="@+id/fieldContainer"
-            android:layout_width="318dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/logo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="20dp"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp">
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/login_title"
+                    android:textColor="@color/secondaryTextColor"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:text="@string/login_instruction"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textField1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:startIconContentDescription="@string/content_description_end_icon"
-                app:startIconTint="@color/colorPrimary"
-                app:startIconDrawable="@drawable/ic_profile">
+                app:boxBackgroundColor="@color/dark_grey"
+                app:startIconDrawable="@drawable/ic_profile"
+                app:startIconTint="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/identityField"
@@ -49,10 +67,11 @@
                     android:layout_height="wrap_content"
                     android:autofillHints=""
                     android:backgroundTint="@android:color/black"
+
                     android:ems="10"
+                    android:hint="@string/login_hint"
                     android:inputType="text|textEmailSubject"
                     android:text="@={loginViewModel.identityString}"
-                    android:hint="@string/login_hint"
                     tools:targetApi="o" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -61,9 +80,9 @@
                 android:id="@+id/textField2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:startIconTint="@color/colorPrimary"
                 app:startIconContentDescription="@string/content_description_end_icon"
-                app:startIconDrawable="@drawable/ic_password">
+                app:startIconDrawable="@drawable/ic_password"
+                app:startIconTint="@color/colorPrimary">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/passwordField"
@@ -71,24 +90,38 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@android:color/black"
                     android:ems="10"
+                    android:hint="@string/password_hint"
                     android:importantForAutofill="no"
                     android:inputType="textPassword"
-                    android:text="@={loginViewModel.passwordString}"
-                    android:hint="@string/password_hint"/>
+                    android:text="@={loginViewModel.passwordString}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/loginButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@color/colorAccent"
+
+                android:background="@drawable/pill_background"
                 android:fontFamily="@font/open_sans"
                 android:onClick="@{loginViewModel::onLoginButtonClick}"
                 android:text="@string/login_button_text"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/secondaryTextColor"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/forgotPasswordLink"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:fontFamily="@font/open_sans"
+                android:onClick="@{loginViewModel::onForgotPassword}"
+                android:text="@string/forgot_password"
+                android:textAlignment="center"
+                android:textColor="@color/secondaryTextColor"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <Button
@@ -100,20 +133,7 @@
                 android:onClick="@{loginViewModel::onRedirectTextClick}"
                 android:text="@string/direct_to_sign_up"
                 android:textAlignment="center"
-                android:textColor="@color/redirect_color"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/forgotPasswordLink"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/open_sans"
-                android:onClick="@{loginViewModel::onForgotPassword}"
-                android:text="@string/forgot_password"
-                android:textAlignment="center"
-                android:textColor="@color/redirect_color"
+                android:textColor="@color/secondaryTextColor"
                 android:textSize="14sp"
                 android:textStyle="bold" />
 
