--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -21,23 +21,49 @@
         android:background="@android:color/white"
         tools:context=".ui.user.SignUpFragment">
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
-            android:contentDescription="@string/logo"
-            app:srcCompat="@drawable/ic_logo" />
+        <Button
+            android:id="@+id/skipButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:layout_marginTop="10dp"
+            android:text="@string/skip_for_now"
+            android:textColor="@color/dark_grey"
+            android:onClick="@{viewModel::onSkipButtonClicked}"/>
 
         <LinearLayout
             android:id="@+id/fieldContainer"
-            android:layout_width="293dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/logo"
-            android:layout_centerHorizontal="true"
+            android:layout_below="@id/skipButton"
             android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sign_up_title"
+                    android:textSize="24dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/secondaryTextColor"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sign_up_instruction"
+                    android:layout_marginTop="10dp"
+                    android:textSize="20dp" />
+            </LinearLayout>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/email"
@@ -135,7 +161,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:background="@color/secondaryColor"
+                android:background="@drawable/pill_background"
                 android:fontFamily="@font/open_sans"
                 android:onClick="@{viewModel::OnClickCreateAccountButton}"
                 android:text="@string/create_account_text"
@@ -153,9 +179,31 @@
                 android:onClick="@{viewModel::OnClickRedirectLoginText}"
                 android:text="@string/redirect_sign_in"
                 android:textAlignment="center"
-                android:textColor="@color/redirect_color"
+                android:background="@null"
+                android:textColor="@color/secondaryTextColor"
                 android:textSize="14sp"
                 android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sign_up_term" />
+
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:gravity="center"
+                    android:id="@+id/termAndPrivacyPolicy"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/term_and_policy" />
+
+            </LinearLayout>
 
             <ProgressBar
                 android:id="@+id/progressBar"
