- Set up Bottom Navigation View - Remove DrawerLayout, Floating action button, notification icon in MainFragment - Connect all the fragment needed with the bottom navigation view

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -206,4 +206,9 @@
             android:id="@+id/action_phoneAuthFragment3_to_resetPasswordFragment"
             app:destination="@id/resetPasswordFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/personalFeedFragment"
+        android:name="upuphere.com.upuphere.ui.PersonalFeedFragment"
+        android:label="fragment_personal_feed"
+        tools:layout="@layout/fragment_personal_feed" />
 </navigation>
