--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -104,7 +104,9 @@
             app:exitAnim="@anim/fui_slide_out_left" />
         <argument
             android:name="roomId"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="null" />
     </fragment>
     <fragment
         android:id="@+id/displayPhotoFragment"
