- Make Toolbar white color in all fragment - Make a post button in toolbar of CreatePostFragment - Make bottom navigation icon outlined when unselected, filled if selected - SelectPhotoFragment when click on Photo button in CreatePostFragment - Load all picture in phone gallery and display all photo in SelectPhotoFragment - Disable Post Button if dont have anything to post, if have insert text and photo, enable the Post button_layout.xml - When 1st sign up, let user answer 3 question, Gender, Dob and Preferences(Part of onboarding process) - Redesign the PhoneAuthFragment for better looking - Open Keyboard when open CreatePostFragment, no matter how also have keyboard in the fragment and dismiss keyboard when leave the fragment - Make view at the bottom move above the keyboard if keyboard is shown - If not log in, clicked on Profile tab in bottomNavigation, shown Login Fragment - When clicked on PostButton(CreatePostFragment), if not log in, show a bottomSheetDialog to let user sign up - When clicked on PostButton, if logged in, then checked the phone is verified, if not verified show PhoneAuthFragment3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,11 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="@color/grey"
-            app:menu="@menu/bottom_navigation_menu" />
+            android:elevation="4dp"
+            app:itemIconTint="@color/bottom_nav_color"
+            app:itemTextColor="@color/bottom_nav_color"
+            app:menu="@menu/bottom_navigation_menu"
+            app:labelVisibilityMode="unlabeled"/>
 
     </RelativeLayout>
 
