--- a/app/src/main/res/menu/menu_post.xml
+++ b/app/src/main/res/menu/menu_post.xml
@@ -4,5 +4,7 @@
 
     <item android:title="@string/post"
         android:id="@+id/create_post"
+        app:actionLayout="@layout/button_layout"
         app:showAsAction="always"/>
+
 </menu>
