--- a/app/src/main/res/layout/fragment_create_post.xml
+++ b/app/src/main/res/layout/fragment_create_post.xml
@@ -15,8 +15,30 @@
         android:layout_height="match_parent"
         android:background="@color/background_color"
         tools:context=".ui.room.CreatePostFragment">
+<!--
+        <Toolbar
+            android:id="@+id/toolbar"
+            android:elevation="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:title="New Post">
 
+            <Button
+                android:id="@+id/postButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/pill_background"
+                android:textColor="@color/grey"
+                android:onClick="@{viewmodel::onPostButtonClicked}"
+                android:textAllCaps="false"
+                android:text="Post" />
+
+        </Toolbar>
+-->
         <com.google.android.material.textfield.TextInputLayout
+            android:layout_below="@+id/toolbar"
             android:id="@+id/textInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,10 +59,12 @@
                 android:importantForAutofill="no"
                 android:inputType="text|textMultiLine"
                 android:scrollHorizontally="false"
-                android:text="@={viewmodel.statusText}" />
+                android:text="@={viewmodel.statusText}">
+                <requestFocus/>
+            </com.google.android.material.textfield.TextInputEditText>
 
         </com.google.android.material.textfield.TextInputLayout>
-
+<!--
         <ImageView
             android:id="@+id/chooseImageButton"
             android:layout_width="60dp"
@@ -51,7 +75,7 @@
             android:contentDescription="@string/choose_image_button"
             android:onClick="@{viewmodel::onImageClick}"
             app:srcCompat="@drawable/ic_image" />
-
+-->
         <ImageView
             android:id="@+id/chosenImageShown"
             android:layout_width="120dp"
@@ -63,6 +87,47 @@
             android:onClick="@{viewmodel::onClickImageChosen}"
             android:visibility="gone"
             tools:srcCompat="@tools:sample/avatars" />
+
+        <Button
+            android:id="@+id/locationButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
+            android:background="@drawable/pill_button_white_background"
+            android:onClick="@{viewmodel::onLocationClicked}"
+            android:text="@string/location"
+            android:textAllCaps="false"
+            android:textColor="@color/redirect_color" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/photoButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:textColor="@color/redirect_color"
+                android:onClick="@{viewmodel::onImageClick}"
+                android:textAllCaps="false"
+                android:text="@string/photo" />
+
+            <Button
+                android:id="@+id/linkButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@null"
+                android:textAllCaps="false"
+                android:textColor="@color/redirect_color"
+                android:text="@string/link" />
+        </LinearLayout>
 
         <ProgressBar
             android:id="@+id/progressBar4"
