--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,13 +6,13 @@
         android:title="Home"
         app:showAsAction="always"
         android:orderInCategory="1"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/selector_home_icon"/>
 
     <item android:id="@+id/personalFeedFragment"
         android:title="Explore"
         app:showAsAction="always"
         android:orderInCategory="2"
-        android:icon="@drawable/ic_feed"/>
+        android:icon="@drawable/selector_icon_explore"/>
 
     <item android:id="@+id/createPostFragment"
         app:showAsAction="always"
@@ -23,13 +23,13 @@
         android:title="Notification"
         app:showAsAction="always"
         android:orderInCategory="4"
-        android:icon="@drawable/ic_notify"/>
+        android:icon="@drawable/selector_notification_icon"/>
 
 
     <item android:id="@+id/profileFragment"
         android:title="Profile"
         app:showAsAction="always"
         android:orderInCategory="5"
-        android:icon="@drawable/ic_profile2"/>
+        android:icon="@drawable/selector_profile_icon"/>
 
 </menu>
